--- a/package.json
+++ b/package.json
@@ -21,7 +21,16 @@
     "@angular/platform-server": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.5",
+    "bootstrap": "^5.3.6",
+    "bootstrap-icons": "^1.13.1",
+    "chart.js": "^4.4.9",
     "express": "^4.18.2",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
+    "ng2-charts": "^4.1.1",
+    "ng2-pdf-viewer": "^10.4.0",
+    "ngx-extended-pdf-viewer": "^23.2.0",
+    "ngx-order-pipe": "^3.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -31,7 +40,9 @@
     "@angular/cli": "^19.1.5",
     "@angular/compiler-cli": "^19.1.0",
     "@types/express": "^4.17.17",
+    "@types/html2canvas": "^0.5.35",
     "@types/jasmine": "~5.1.0",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
